--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -2,7 +2,7 @@
 
   <div class="group">
     <%= link_to("Write a Post", new_group_post_path(@group), class: "btn btn-default pull-right")%>
-    
+
     <% if current_user && current_user == @group.user %>
       <%= link_to("Edit", edit_group_path(@group), class: "btn btn-primary pull-right")%>
     <% end %>
@@ -29,5 +29,12 @@
     <% end %>
   </tbody>
 </table>
+
+</tbody>
+</table>
+
+<div class="text-center">
+<%= will_paginate @posts %>
+</div>
 
 </div>
